www/index.css
html,body {
    font-size: 1.1em;
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
}
br,.clear {
    clear: both;
}
#loading {
    display: none;
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0px;
    left: 0px;
    z-index: 100;
    background-image: url('css/images/pbar-ani.gif');
    background-repeat: no-repeat;
    background-position: center center;
}
#container {
    width: 100%;
    height: 100%;
}
#leftbox {
    /* width: 380px; */
    width: 100%;
    height: 100%;
    float: left;
}
#rightbox {
    /* width: 900px; */
    width: 100%;
    height: 100%;
    float: right;
}
#menu {
    /* width: 380px; */
    width: 100%;
    height: 36px;
}
#list {
    width: 380px;
    height: 100%;
    overflow: auto;
}
#content {
    width: 100%;
    height: 100%;
    overflow: auto;
    margin-top: 0px;
}
#activefilterlist p, #activefilterlist p p  {
    float: left;
    margin: 0px;
    margin-right: 5px;
    padding-right: 5px;
    padding-left: 5px;
    line-height: 2.5em;
}
.ui-layout-center, .ui-layout-west, .ui-layout-north {
    padding: 0px !important;
    overflow: hidden !important;
}
.bigfont {
    font-size: 1.3em !important;
}
.padded {
    margin-top: 5px;
    padding: 10px;
    line-height: 1.5em;
}
.solutionargument {
    width: 300px;
}
.solutionargument, .solutioncommentlink {
    cursor: pointer;
}
.filterlist {
    list-style: none;
}
.filterlistelement {
    float: left;
    padding: 0.2em;
    margin: 0.1em;
}
.hidden {
    display: none;
}
.active {
    background: red;
}
.solution {
    width: 100%;
    height: 762px;
}
.solutionlist {
    width: 40%;
    height: 762px;
    float: left;
    overflow: auto;
}
.solutiontext {
    width: 60%;
    height: 762px;
    float: left;
}
.solutionpro {
    list-style: none;
    padding: 2px;
}
.solutioncontra  {
    list-style: none;
    padding: 2px;
}
.solutionneutral {
    list-style: none;
    padding: 2px;
}
.floatright {
    float: right;
}
.floatleft {
    float: left;
}
.mybutton {
    font-size: 1.1em !important;
}
.mybutton {
    font-size: 1.1em !important;
}
.slideout {
    margin-left: -358px;
}
.widebox {
    width: 1258px !important;
}
ul .comment {
    list-style: none;
}
.debatelist {
    list-style: none;
}
.debatesolution {
    cursor: pointer;
}
li .comment {
    margin: 2px;
    padding-left: 2px;
    padding-right: 2px;
}
.comment {
    margin: 2px;
}
.addcomment span span, .addsolution span span, .adddebate span span {
    float: left;
    width: 150px;
}
.addcomment span input, .addcomment span textarea, .addsolution span input, .addsolution span textarea, .adddebate span input, .adddebate span textarea {
    float: left;
    width: 500px;
}
.formerror {
    color: red;
}
.smallcontent form table tr td, .smallcontent form table tr td input{
    width: 250px;
}
.smallcontent {
    width: 500px;
    position: absolute;
    left: 50%;
    margin-left: -250px;
}

